--- a/views/homepage/header.ejs
+++ b/views/homepage/header.ejs
@@ -26,7 +26,7 @@
 
 <body>
     <!-- Navbar for >md -->
-    <nav class="d-none d-md-flex navbar navbar-light" style="border-bottom: 2px solid orange">
+    <nav class="d-none d-md-flex navbar navbar-light bg-white" style="border-bottom: 2px solid orange">
         <a class="navbar-brand" href="/">
             <img src="../../images/tomspizza_logo_dual.jpg" width="250" class="d-inline-block align-top img-fluid ml-4"
                 alt="TomsPizza">
