--- a/views/homepage/section.ejs
+++ b/views/homepage/section.ejs
@@ -1,3 +1,8 @@
+<%if(logStatus == 'true'){%>
+<h3>Logged in</h3>
+<%} else {%>
+<h3>Logged out</h3>
+<%}%>
 <div class="container">
     <!-- HERO -->
     <div class="heroDiv">
