--- a/views/userAccounts/signupPage.ejs
+++ b/views/userAccounts/signupPage.ejs
@@ -4,24 +4,27 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <meta name="description" content="">
+  <meta name="description" content="Pizza he pizza">
   <meta name="author" content="">
-  <link rel="icon" href="">
+  <link rel="icon" href="../../images/favicon.ico">
 
-  <title>Technobita-Signup</title>
+  <title>Tomspizza-Signup</title>
 
   <!-- Bootstrap core CSS -->
-  <link rel="stylesheet" type="text/css" href="/bootstrap/css/bootstrap.min.css">
-  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/"
-    crossorigin="anonymous">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
+    integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css"
+    integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
   <!-- Custom styles for this template -->
-  <link href="/css/login.css" rel="stylesheet">
+  <link rel="stylesheet" href="/css/login.css">
 
   <style>
-    .warningInactive{
+    .warningInactive {
       display: none;
     }
-    .warningActive{
+
+    .warningActive {
       display: block;
     }
   </style>
@@ -30,12 +33,11 @@
 
 <body class="text-center">
   <form class="form-signin" action="/createUser" method="POST">
-    <img class="mb-4" src="/images/logo/loginIcon.png" alt="" width="72" height="72">
+    <img class="mb-4" src="../../images/tomspizza_login_logo.jpg" alt="" width="200px" height="72">
     <h1 class="h3 mb-3 font-weight-normal">Create Account</h1>
     <input name="fname" type="text" class="my-2 form-control" placeholder="First Name" required autofocus>
     <input name="lname" type="text" class="my-2 form-control" placeholder="Last Name" required>
-    <input name="email" type="email" class="my-2 form-control" placeholder="Email" required>
-    <input name="mob" type="tel" class="my-2 form-control" placeholder="Mobile" required>
+    <input name="email" type="email" class="my-2 form-control" placeholder="Email" required>    
     <input name="pass" type="password" class="my-2 form-control" id="pass" placeholder="Password" required>
     <input name="cpass" type="password" class="my-2 form-control" id="cpass" placeholder="Confirm Password" required>
     <div class="warningInactive" id="warningMessage">
@@ -50,20 +52,21 @@
     </div>
     <button class="btn btn-lg btn-primary btn-block" onclick="validate();" type="submit" id="signUpBtn">Sign Up</button>
     <a href="/login">Login to existing account</a>
-    <p class="mt-5 mb-3 text-muted">&copy; 2019 TechNobita.com </p>
+    <p class="mt-5 mb-3 text-muted">&copy; 2019 Tomspizza.com </p>
   </form>
 </body>
 <script>
   var pass = document.getElementById("pass");
   var cpass = document.getElementById("cpass");
   var msg = document.getElementById("warningMessage");
+
   function validate() {
     if (pass.value != cpass.value) {
       msg.classList.toggle('warningActive');
       event.preventDefault();
     } else {
       msg.classList.remove('warningActive');
-      msg.classList.add('warningInactive');     
+      msg.classList.add('warningInactive');
     }
   }
 </script>
