--- a/views/userAccounts/signupPage.ejs
+++ b/views/userAccounts/signupPage.ejs
@@ -33,7 +33,7 @@
 
 <body class="text-center">
   <form class="form-signin" action="/signup" method="POST">
-    <img class="mb-4" src="../../images/tomspizza_login_logo.jpg" alt="" width="200px" height="72">
+    <img class="mb-4" src="../../images/tomspizza_login_logo.jpg" alt="" width="200px">
     <h1 class="h3 mb-3 font-weight-normal">Create Account</h1>
     <input name="fname" type="text" class="my-2 form-control" placeholder="First Name" required autofocus>
     <input name="lname" type="text" class="my-2 form-control" placeholder="Last Name" required>
