--- a/views/homepage/header.ejs
+++ b/views/homepage/header.ejs
@@ -32,11 +32,13 @@
                 alt="TomsPizza">
         </a>
 
-
         <%if(logStatus == 'true'){%>
         <div class="accounts mr-3">
             <img src="../../images/accountImg.png" width="48px">
-            <p class="d-inline-block text-danger">Hi, <%=userName%></p>
+            <p class="d-inline text-danger">Hi, <%=userName%></p>
+            <a href="/cart">
+                | <i class="fas fa-shopping-cart text-primary"></i>
+            </a>
             <a href="/logout" class="text-danger">
                 | Logout
             </a>
@@ -63,24 +65,47 @@
     </nav>
     <!-- Secondary navbar -->
     <nav class="d-md-none justify-content-center navbar navbar-light text-white nav2">
-        <div class="accounts">
-            <a href="/" class="mx-2 text-white">
-                <i class="fas fa-home text-white"></i>
-            </a>
-            <a href="/pizza" class="mx-2 text-white">
-                Pizza
-            </a>
-            <a href="/burgers" class="mx-2 text-white">
-                Burgers
-            </a>
-            <a href="/beverages" class="mx-2 text-white">
-                Beverages
-            </a>
-            <a href="/login" class="mx-2 text-white">
-                <i class="fas fa-sign-in-alt"></i>
-            </a>
-            <a href="/signup" class="mx-2 text-white">
-                <i class="fas fa-user-plus"></i>
-            </a>
-        </div>
+            <div class="accounts">                
+                <a href="/" class="mx-2 text-white">
+                     <i class="fas fa-home text-white"></i>
+                </a>
+                <a href="/pizza" class="mx-2 text-white">
+                    Pizza
+                </a>
+                <a href="/burgers" class="mx-2 text-white">
+                    Burgers
+                </a>
+                <a href="/beverages" class="mx-2 text-white">
+                    Beverages
+                </a>
+                <%if(logStatus == 'true'){%>
+                    <span class="dropdown">
+                            <a href="/beverages" class="mx-2 text-white dropdown-toggle" data-toggle="dropdown">
+                                <img src="../../images/accountImg.png" width="48px" class="d-none d-lg-flex"> 
+                                Hi, <%=userName%>
+                            </a>
+                            <ul class="dropdown-menu pl-3">
+                            <a href="/cart" class="">
+                                <li>                                   
+                                    <i class="fas fa-shopping-cart"></i>                                    
+                                </li>
+                            </a>
+                            <a href="/logout" class="">
+                                <li>                           
+                                    Logout                            
+                                </li>
+                            </a>
+                            </ul>
+                        </span>
+                    <%} else {%>            
+                        <a href="/login" class="mx-2 text-white">
+                            <i class="fas fa-sign-in-alt"></i>
+                        </a>
+                        <a href="/signup" class="mx-2 text-white">
+                            <i class="fas fa-user-plus"></i>
+                        </a>            
+                    <%}%>    
+            
+                
+            </div>
     </nav>
